--- a/department-service.properties
+++ b/department-service.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message= Hello, Dept Service updated
+spring.boot.message= Hello, Dept Service spring cloud Bus Demo
