--- a/employee-service.properties
+++ b/employee-service.properties
@@ -7,6 +7,6 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
-spring.boot.message= Hello, employee service
+spring.boot.message= Hello, employee service Spring cloud Bus Demo
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
